--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=demo
+jwt.secret=cEcWOcFNhEWm7xHl--ql_J-wCu7Ioqod35GLYNBWmo0
+jwt.expiration=3600000
+jwt.issuer=high-card-api
